--- a/yii2/all.html
+++ b/yii2/all.html
@@ -32,6 +32,10 @@
                 <div id="toc" data-spy="affix" data-offset-top="0" data-offset-bottom="0"></div>
             </div>
             <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
+                <h2>Установка</h2>
+                <p><code>composer create-project --prefer-dist yiisoft/yii2-app-advanced ./</code></p>
+                <p><code>composer create-project --prefer-dist yiisoft/yii2-app-basic ./</code></p>
+                <p>Затем только <code>git init</code>, <code>git remote add...</code></p>
                 <h2>Config</h2>
                 <h3>Dev or Prod</h3>
                 <p>In <code>web/index.php</code>:</p>
