--- a/sublime-text-3/all.html
+++ b/sublime-text-3/all.html
@@ -38,6 +38,10 @@
                 <div id="toc" data-spy="affix" data-offset-top="0" data-offset-bottom="0"></div>
             </div>
             <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
+                <h2>Основы</h2>
+                <h3>Проекты</h3>
+                <p><strong>Очистить список проектов в „Switch Project“:</strong></p>
+                <p>Project → Open Recent → Clear Items</p>
                 <h2>Keyboard shortcuts</h2>
                 <h3>Мой конфиг</h3>
                 <pre>[
@@ -229,43 +233,27 @@
     &quot;completions&quot;: [
         {
             &quot;contents&quot;: &quot;–&quot;,
-            &quot;trigger&quot;: &quot;utf8minus&quot;
-        }, 
+            &quot;trigger&quot;: &quot;utf8-minus&quot;
+        },
         {
             &quot;contents&quot;: &quot;—&quot;,
-            &quot;trigger&quot;: &quot;utf8tire&quot;
-        }, 
+            &quot;trigger&quot;: &quot;utf8-tire&quot;
+        },
         {
             &quot;contents&quot;: &quot;«»&quot;,
-            &quot;trigger&quot;: &quot;utf8kavichkiElki&quot;
-        }, 
+            &quot;trigger&quot;: &quot;utf8-kavichki-elki&quot;
+        },
         {
             &quot;contents&quot;: &quot;„“&quot;,
-            &quot;trigger&quot;: &quot;utf8kavichkiLapki&quot;
-        }, 
+            &quot;trigger&quot;: &quot;utf8-kavichki-lapki&quot;
+        },
         {
-            &quot;contents&quot;: &quot;‘’&quot;,
-            &quot;trigger&quot;: &quot;utf8kavichkiPalchiki&quot;
-        }, 
-        {
-            &quot;contents&quot;: &quot;&lt;a href=\&quot;$1\&quot;&gt;$0&lt;/a&gt;&quot;, 
-            &quot;trigger&quot;: &quot;a&quot;
-        }, 
-        {
-            &quot;contents&quot;: &quot;&lt;abbr&gt;$0&lt;/abbr&gt;&quot;, 
-            &quot;trigger&quot;: &quot;abbr&quot;
-        }, 
-        {
-            &quot;contents&quot;: &quot;&lt;acronym&gt;$0&lt;/acronym&gt;&quot;, 
-            &quot;trigger&quot;: &quot;acronym&quot;
-        }, 
-        &quot;ninja&quot;, 
-        &quot;robot&quot;, 
-        &quot;pizza&quot;
+            &quot;contents&quot;: &quot;←↑→↓&quot;,
+            &quot;trigger&quot;: &quot;utf8-strelki&quot;
+        },
+        &quot;iadfeshchm&quot;
     ]
-}
-                        
-                </pre>
+}</pre>
             </div>
         </div>
     </div>
