--- a/git/all.html
+++ b/git/all.html
@@ -70,6 +70,8 @@
 <p>— создать папку „repo“ в текущей папке и создать в ней репозиторий.</p>
 <pre>$ git init --bare repo</pre>
 <p>— аналогично предыдущему примеру, но создаётся „голый“ репозиторий.</p>
+<p><strong>Примечания по бар репозиториям</strong></p>
+<p>Можно связать два бар репозитория, указав remote репозиторий, однако выполнять команду pull не дает: <code>git-pull cannot be used without a working tree.</code> Дает делать fetch (pull - составная команда) и вталкивать (push) в другой бар репозиторий.</p>
 
 
 
