--- a/phpbb3/all.html
+++ b/phpbb3/all.html
@@ -57,6 +57,9 @@ vendor/
 
 
 					<h2>БД</h2>
+					<h3>Таблицы</h3>
+					<p><strong>Добавиьт свою Стандартную</strong></p>
+					<p><code>/includes/constants.php</code></p>
 					<h3>Пользователь</h3>
 					<h4>Подтверждение email пользователя запросом</h4>
 
