--- a/theme/footer.html
+++ b/theme/footer.html
@@ -11,3 +11,22 @@
 // grab the 2nd child and add the parent class. tr:nth-child(2)
 document.getElementsByTagName('tr')[1].className = 'parent';
 </script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+<script type="text/javascript">
+$(document).ready(function(){
+	$("tr>td:first-child>a").attr('tabindex', -1);
+	$("tr.indexhead a").attr('tabindex', -1);
+	$('a').keydown(function(event) {
+		if ( (event.keyCode == 40) && event.altKey ) {
+	        $(this).next('a').focus();
+			console.log('asd');
+		}
+	    // if (e.keyCode==40) {
+	    //     $(this).next('input').focus();
+	    // }
+	    // http://api.jquery.com/event.which/
+	    // http://stackoverflow.com/questions/12407093/focus-the-next-input-with-down-arrow-key-as-with-the-tab-key
+	    // https://css-tricks.com/snippets/javascript/javascript-keycodes/
+	});
+});
+</script>
