--- a/sublime-text-3/all.html
+++ b/sublime-text-3/all.html
@@ -25,7 +25,7 @@
     <li>
         <kbd>Ctrl + Shift + P</kbd> - </li>
     <li>
-        <kbd>Ctrl + Alt + P</kbd> - </li>
+        <kbd>Ctrl + Alt + P</kbd> - а так же сменить тип файла (подветку синтаксиса);</li>
     <li>
         <kbd>Ctrl + R</kbd> - </li>
     <li>
