--- a/phpbb3/all.html
+++ b/phpbb3/all.html
@@ -1,3 +1,8 @@
+<h2>Шаблоны</h2>
+<h3>готовим вывод массива данных в шаблоне</h3>
+<p>
+    <a href="https://wiki.phpbb.com/Tutorial.Template_syntax">https://wiki.phpbb.com/Tutorial.Template_syntax</a>
+</p>
 <h2>Функции</h2>
 <pre class="prettyprint lang-php">
 $remote_addr = $request->variable('REMOTE_ADDR', '', false, \phpbb\request\request_interface::SERVER);
